README angepasst